--- a/views/view.ejs
+++ b/views/view.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css-1/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
@@ -27,11 +27,11 @@
 </head>
 <body>
     <div class="form-style-5">
-           <h2>Willkommen <%= userdata.Nachname %> !  </h2>
-           <p><%= userdata.date %></p>
-           <p>Ihr Temin findet um <%= userdata.Uhrzeit %> Uhr statt </p>
-           <p>Sie können zukünftig auch ohne weitere Anmeldung zum Testen erscheinen. Bringen Sie bitte diesen QR COde mit!</p>
-           <p>Die Bestätigung haben Sie ebenfalls via E-Mail erhalten.</p>
+           <h2>Herzlich Willkommen bei MCOV Schnelltestzentrum!  </h2>
+           <p></p>
+           <p>Ihr Temin findet am <%= date %> um <%= Uhrzeit %> Uhr statt </p>
+           <p>Sie können zukünftig auch ohne weitere Anmeldung zum Testen erscheinen. Bringen Sie bitte diesen QR Code mit!</p>
+           <p> Eine Bestätigungsmail mit dem Qr Code haben Sie ebenfalls per E-Mail erhalten.</p>
 
             <img src="<%= qr_code %>" alt="QR Code">
             <p><%= id %> </p>
