--- a/views/index.ejs
+++ b/views/index.ejs
@@ -596,7 +596,7 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="gridCheck" required>
         <label class="form-check-label" for="gridCheck">
-         Ich habe <a href="/datenschutz"> die aufgeführten Hinweise zum PoC-Antigen-Test auf SARS-VoV-2 sowie die Datenschutzinformation</a> gelesen und stimme der Durchführung des Tests zu.
+         Ich habe <a href="https://www.iubenda.com/privacy-policy/23035674/cookie-policy"> die aufgeführten Hinweise zum PoC-Antigen-Test auf SARS-VoV-2 sowie die Datenschutzinformation</a> gelesen und stimme der Durchführung des Tests zu.
         </label>
       </div>
     <input type="submit" value="Termin buchen" />
