--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,63 +55,63 @@
                                     <option value="07:37">07:37 Uhr</option>
                                     <option value="07:38">07:38 Uhr</option>
                                     <option value="07:39">07:39 Uhr</option>
-                                    <option value="747044">07:41 Uhr</option>
-                                    <option value="747045">07:42 Uhr</option>
-                                    <option value="747050">07:47 Uhr</option>
-                                    <option value="747051">07:48 Uhr</option>
-                                    <option value="747052">07:49 Uhr</option>
-                                    <option value="747053">07:50 Uhr</option>
-                                    <option value="747054">07:51 Uhr</option>
-                                    <option value="747055">07:52 Uhr</option>
-                                    <option value="747056">07:53 Uhr</option>
-                                    <option value="747057">07:54 Uhr</option>
-                                    <option value="747059">07:56 Uhr</option>
-                                    <option value="747060">07:57 Uhr</option>
-                                    <option value="747061">07:58 Uhr</option>
-                                    <option value="747062">07:59 Uhr</option>
-                                    <option value="747065">08:02 Uhr</option>
-                                    <option value="747066">08:03 Uhr</option>
-                                    <option value="747068">08:05 Uhr</option>
-                                    <option value="747069">08:06 Uhr</option>
-                                    <option value="747070">08:07 Uhr</option>
-                                    <option value="747071">08:08 Uhr</option>
-                                    <option value="747075">08:12 Uhr</option>
-                                    <option value="747076">08:13 Uhr</option>
-                                    <option value="747080">08:17 Uhr</option>
-                                    <option value="747081">08:18 Uhr</option>
-                                    <option value="747082">08:19 Uhr</option>
-                                    <option value="747085">08:22 Uhr</option>
-                                    <option value="747086">08:23 Uhr</option>
-                                    <option value="747087">08:24 Uhr</option>
-                                    <option value="747090">08:27 Uhr</option>
-                                    <option value="747092">08:29 Uhr</option>
-                                    <option value="747096">08:33 Uhr</option>
-                                    <option value="747097">08:34 Uhr</option>
-                                    <option value="747100">08:37 Uhr</option>
-                                    <option value="747102">08:39 Uhr</option>
-                                    <option value="747103">08:40 Uhr</option>
-                                    <option value="747104">08:41 Uhr</option>
-                                    <option value="747105">08:42 Uhr</option>
-                                    <option value="747106">08:43 Uhr</option>
-                                    <option value="747109">08:46 Uhr</option>
-                                    <option value="747110">08:47 Uhr</option>
-                                    <option value="747111">08:48 Uhr</option>
-                                    <option value="747112">08:49 Uhr</option>
-                                    <option value="747115">08:52 Uhr</option>
-                                    <option value="747116">08:53 Uhr</option>
-                                    <option value="747117">08:54 Uhr</option>
-                                    <option value="747118">08:55 Uhr</option>
-                                    <option value="747119">08:56 Uhr</option>
-                                    <option value="747120">08:57 Uhr</option>
-                                    <option value="747127">09:04 Uhr</option>
-                                    <option value="747128">09:05 Uhr</option>
-                                    <option value="747129">09:06 Uhr</option>
-                                    <option value="747130">09:07 Uhr</option>
-                                    <option value="747131">09:08 Uhr</option>
-                                    <option value="747132">09:09 Uhr</option>
-                                    <option value="747134">09:11 Uhr</option>
-                                    <option value="747135">09:12 Uhr</option>
-                                    <option value="747147">09:24 Uhr</option>
+                                    <option value="07:41">07:41 Uhr</option>
+                                    <option value="07:42">07:42 Uhr</option>
+                                    <option value="07:47">07:47 Uhr</option>
+                                    <option value="07:48">07:48 Uhr</option>
+                                    <option value="07:49">07:49 Uhr</option>
+                                    <option value="07:50 ">07:50 Uhr</option>
+                                    <option value="07:51">07:51 Uhr</option>
+                                    <option value="07:52">07:52 Uhr</option>
+                                    <option value="07:52">07:53 Uhr</option>
+                                    <option value="07:54">07:54 Uhr</option>
+                                    <option value="07:56">07:56 Uhr</option>
+                                    <option value="07:57">07:57 Uhr</option>
+                                    <option value="07:58">07:58 Uhr</option>
+                                    <option value="07:59">07:59 Uhr</option>
+                                    <option value="08:02">08:02 Uhr</option>
+                                    <option value="08:03">08:03 Uhr</option>
+                                    <option value="08:05">08:05 Uhr</option>
+                                    <option value="08:06">08:06 Uhr</option>
+                                    <option value="08:07 ">08:07 Uhr</option>
+                                    <option value="08:08">08:08 Uhr</option>
+                                    <option value="08:12">08:12 Uhr</option>
+                                    <option value="08:13">08:13 Uhr</option>
+                                    <option value="08:17">08:17 Uhr</option>
+                                    <option value="08:18">08:18 Uhr</option>
+                                    <option value="08:19">08:19 Uhr</option>
+                                    <option value="08:22">08:22 Uhr</option>
+                                    <option value="08:23">08:23 Uhr</option>
+                                    <option value="08:24">08:24 Uhr</option>
+                                    <option value="08:27">08:27 Uhr</option>
+                                    <option value="08:29">08:29 Uhr</option>
+                                    <option value="08:33">08:33 Uhr</option>
+                                    <option value="08:34">08:34 Uhr</option>
+                                    <option value="08:37">08:37 Uhr</option>
+                                    <option value="08:39">08:39 Uhr</option>
+                                    <option value="08:40 ">08:40 Uhr</option>
+                                    <option value="08:41">08:41 Uhr</option>
+                                    <option value="08:42">08:42 Uhr</option>
+                                    <option value="08:43">08:43 Uhr</option>
+                                    <option value="08:46">08:46 Uhr</option>
+                                    <option value="08:47">08:47 Uhr</option>
+                                    <option value="08:48">08:48 Uhr</option>
+                                    <option value="08:49">08:49 Uhr</option>
+                                    <option value="08:52">08:52 Uhr</option>
+                                    <option value="08:53">08:53 Uhr</option>
+                                    <option value="08:54">08:54 Uhr</option>
+                                    <option value="08:55">08:55 Uhr</option>
+                                    <option value="08:56">08:56 Uhr</option>
+                                    <option value="08:57">08:57 Uhr</option>
+                                    <option value="09:04">09:04 Uhr</option>
+                                    <option value="09:05">09:05 Uhr</option>
+                                    <option value="09:06">09:06 Uhr</option>
+                                    <option value="09:07">09:07 Uhr</option>
+                                    <option value="09:08">09:08 Uhr</option>
+                                    <option value="09:09">09:09 Uhr</option>
+                                    <option value="09:11">09:11 Uhr</option>
+                                    <option value="09:12">09:12 Uhr</option>
+                                    <option value="09:24">09:24 Uhr</option>
                                     <option value="747151">09:28 Uhr</option>
                                     <option value="747162">09:39 Uhr</option>
                                     <option value="747166">09:43 Uhr</option>
@@ -410,6 +410,7 @@
     <input type="text" name="Vorname" placeholder="Vorname *" required>
     <input type="text" name="Nachname" placeholder="Nachname *" required>
     <input type="email" name="email" placeholder="E-Mail Adresse *" required>
+    <input type="tel" name="Telefonnummer" placeholder="Telefonnummer *" required>
     <div>
       <label for="job">Geburtsdatum</label>
       <select class="form-control" name="birth_date_day" style="float: left; width: 25%;" required>
