--- a/views/index.ejs
+++ b/views/index.ejs
@@ -410,7 +410,7 @@
     <input type="text" name="Vorname" placeholder="Vorname *" required>
     <input type="text" name="Nachname" placeholder="Nachname *" required>
     <input type="email" name="email" placeholder="E-Mail Adresse *" required>
-    <input type="tel" name="Telefonnummer" placeholder="Telefonnummer *" required>
+    <input type="text" name="Telefonnummer" placeholder="Telefonnummer *" required>
     <div>
       <label for="job">Geburtsdatum</label>
       <select class="form-control" name="birth_date_day" style="float: left; width: 25%;" required>
