--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <label for="Testart">Testart:</label>
     <select id="Testart" name="Testart">
       <option selected>Schnelltest</option>
-      <option>Antikörpertest</option>
+      <option disabled>Antikörpertest (kommt bald)</option>
     </select>  
     <label for="date">Datum</label>
     <input type="date" id="date"  name="date"  required >
@@ -592,12 +592,13 @@
   </div>
     <input type="text" name="Strasse" placeholder="Straße und Hausnummer *" required>
     <input type="text" name="Postleitzahl" placeholder="Postleitzahl (PLZ) *" required>
+    <input type="text" name="Telefonnummer" placeholder="Telefonnummer *" required>
     <input type="text" name="Ort" placeholder="Ort *" required>
     <div class="col-14">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="gridCheck" required>
         <label class="form-check-label" for="gridCheck">
-         Ich habe <a href="https://www.iubenda.com/privacy-policy/23035674/cookie-policy"> die aufgeführten Hinweise zum PoC-Antigen-Test auf SARS-VoV-2 sowie die Datenschutzinformation</a> gelesen und stimme der Durchführung des Tests zu.
+         Ich habe <a href="https://www.iubenda.com/privacy-policy/23035674/legal"> die aufgeführten Hinweise zum PoC-Antigen-Test auf SARS-VoV-2 sowie die Datenschutzinformation</a> gelesen und stimme der Durchführung des Tests zu.
         </label>
       </div>
     <input type="submit" value="Termin buchen" />
